--- a/comunidade.html
+++ b/comunidade.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/darcula.css">
-    <link rel="stylesheet" href="/assets/css/comunidade.css">
+    <link rel="stylesheet" href="assets/css/darcula.css">
+    <link rel="stylesheet" href="assets/css/comunidade.css">
 </head>
 <body spellcheck="false">
     <main class="main">
@@ -16,8 +16,8 @@
         <ul class="todos-projetos js-todos-projetos">
         </ul>
     </main>
-    <script src="/assets/js/comunidade.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
     <script>
         const todosOsCodigos = document.querySelectorAll('code')
         todosOsCodigos.forEach(codigo => {
